# vpick

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  PACKAGE_VERSION  README  acinclude.m4  autogen.sh  build_debs.sh.in  configure.ac  vpick-desktop.spec.in  vpick-embedded.spec.in  vpick.service.in  vpick.spec.in
conf/: Makefile.am  system.fvwm2rc  virt-viewer-settings.in  vpick-sample.conf  xorg-vpick.conf  xserver.pam.conf
conf/rasppi/: config.txt
debian/: Makefile.am  changelog.src  control.src  copyright  postinst  prerm  rules
helpers/: Makefile.am
icons/: Makefile.am  lightbulb.xpm  noexit.xpm  vpick-16x16.xpm  vpick-48x48.xpm
src/: Makefile.am  cmdswitch.cpp  cmdswitch.h  colorbox.cpp  colorbox.h  combobox.cpp  combobox.h  config.cpp  config.h  hostbutton.cpp  hostbutton.h  hostdialog.cpp  hostdialog.h  layoutdialog.cpp  layoutdialog.h  network.cpp  network.h  profile.cpp  profile.h  rpiconfig.cpp  rpiconfig.h  screendata.cpp  screendata.h  screensource.cpp  screensource.h  settingsdialog.cpp  settingsdialog.h  synergydialog.cpp  synergydialog.h  synergygrid.cpp  synergygrid.h  synergynode.cpp  synergynode.h  synergynodedialog.cpp  synergynodedialog.h  trashcan.cpp  trashcan.h  viewerprocess.cpp  viewerprocess.h  vpick.cpp  (+1 more)
systemd/: Makefile.am  vpick.service  vpick.target
xdg/: Makefile.am  vpick.desktop  vpick.desktop.in
